===========
PyObjC NEWS
===========

An overview of the relevant changes in new, and older, releases.

Version 2.4  (or 3.0)
---------------------

- objc.registerStructAlias now returns the alias type instead of ``None``

- In Python 3.x there is a new way to explicitly specify which (informal)
  protocols a class conforms to::

     class MyClass (NSObject, protocols=[Protocol1, Protocol2]):
        pass

  Python 2.x does not support this syntax, you can still use the
  following code there::

     class MyClass (NSObject, Protocol1, Protocol2):
        pass

  Note: The Python 2.x style works upto Python 3.2. In Python 3.3 and later
  the Python 2.x style declaration no longer works due to changes in the
  language.

- Updated Python support. With this release PyObjC supports Python 2.6 and later,
  including Python 3.3 (which has a completely new representation for unicode strings)

  NOTE: Support for 3.3 is very much work in progress right now, there have
  been changes for the new unicode representation, but more changes are required.

  Known issues:

  * metadata conflict error when explictly implementing a prototype

  * one test failure w.r.t. unichar argument arrays

  Futhermore there are two refcounting test failures in both 3.2 and 3.3
  

- Add ``objc.setObjCPointerIsError`` and ``objc.getObjCPointerIsError``.
  
  By default PyObjC will create a ``PyObjCPointer`` object when it tries
  to convert a pointer it doesn't know about to Python. These values are
  fairly useless and obvious an indication that an API is wrapped improperly.

  With ``objc.setObjCPointerIsError(True)`` you can tell the bridge to
  raise an exception instead of creating these values.

- -[OC_PythonNumber compare:] calls super when the other value is
  an NSNumber and the Python value can be represented using a basic C 
  type.

  This could slightly affect the results of comparing Python and
  Cocoa numbers, and avoids unbounded recursion when comparing 